--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <!-- Hidden popup -->
   <div id="popup" class="popup">
-    <p class="popup-text">❌ Wrong Bitch – Leave</p>
+    <p class="popup-text">❌ Wrong Bitch – Ass off</p>
     <button onclick="hidePopup()">OK</button>
   </div>
 
@@ -187,7 +187,7 @@
 
     // Unlock logic
     function unlock() {
-      const PASS = "Admin@200998";
+      const PASS = "faka@200998";
       const entered = document.getElementById('pwd').value;
       if (entered === PASS) {
         window.location.href = "dashboard.html";
