--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <!-- Hidden popup -->
   <div id="popup" class="popup">
-    <p class="popup-text">❌ Wrong Bitch – Ass off</p>
+    <p class="popup-text">❌Nice try!! Bitch❌</p>
     <button onclick="hidePopup()">OK</button>
   </div>
 
