--- a/index.html
+++ b/index.html
@@ -202,6 +202,11 @@
       document.getElementById("popup").style.display = "none";
     }
   </script>
-
+  <!-- Bottom design -->
+  <div class="bottom-lines">
+      <hr style="width: 150px; border: 1px solid black; margin: 5px auto;" />
+  <p style="color: black; font-size: 14px; margin: 5px 0;">My Secret Vault</p>
+  <hr style="width: 150px; border: 1px solid black; margin: 5px auto;" />
+</div>
 </body>
 </html>
