--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 <!-- Bottom design -->
   <div class="bottom-lines">
     <hr />
-    <p>My Secret Vault</p>
+    <p>You're not Welcome here</p>
     <hr />
   </div>
 </body>
