--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   <!-- Bottom lines -->
   <div class="bottom-lines">
     <hr />
-    <p>You're not welcome here</p>
+    <p>🔑Password or Leave</p>
     <hr />
   </div>
 
