--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <!-- Bottom design -->
 <div class="bottom-lines">
   <hr />
-  <p>🔑Password</p>
+  <p>🔑Password or Leave</p>
   <hr />
 </div>
 
