--- a/index.html
+++ b/index.html
@@ -160,10 +160,11 @@
   </div>
 
   <!-- Wrong-password popup -->
-  <div id="popup" class="popup">
-    <p class="popup-text">❌ Nice try, Bitch! ❌</p>
-    <button onclick="hidePopup()">OK</button>
-  </div>
+  <div id="popup" style="display: none; text-align: center;">
+  <img src="luffy.png" alt="Wrong password" style="width: 120px; margin-bottom: 10px;" />
+  <p style="color: white; font-size: 18px;">❌ Nice try, Bitch! ❌</p>
+  <button onclick="hidePopup()">OK</button>
+</div>
 
 <!-- Bottom design -->
 <div class="bottom-lines">
