--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
   </div>
 
   <!-- Wrong-password popup -->
-  <div id="popup" style="display: none; text-align: center;">
-  <img src="luffy.png" alt="Wrong password" style="width: 120px; margin-bottom: 10px;" />
-  <p style="color: white; font-size: 18px;">❌ Nice try, Bitch! ❌</p>
-  <button onclick="hidePopup()">OK</button>
+  <div id="popup" style="display: none; text-align: center; background-color: #000000e0; padding: 20px; border-radius: 10px;">
+  <img src="luffy.png" alt="Wrong password" style="width: 120px; margin-bottom: 10px; border-radius: 8px;" />
+  <p style="color: white; font-size: 18px; margin-bottom: 10px;">❌ Nice try, Bitch! ❌</p>
+  <button onclick="hidePopup()" style="padding: 8px 16px; background: #007bff; border: none; color: white; border-radius: 5px; cursor: pointer;">OK</button>
 </div>
 
 <!-- Bottom design -->
