--- a/index.html
+++ b/index.html
@@ -1,150 +1,120 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Mi-Vault</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mi-Vault</title>
+  <style>
+    :root {
+      --chelsea: #0047ab;
+      --cyan: #00fff0;
+    }body {
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  background: var(--chelsea);
+  color: #fff;
+}
 
-<style>
-/* ---------- theme ---------- */
-:root{
-  --chelsea:#0047ab;      /* Chelsea blue */
-  --cyan:#00fff0;
+.gif-container {
+  margin-bottom: 20px;
 }
-/* ---------- reset ---------- */
-*{box-sizing:border-box;margin:0;padding:0}
-/* ---------- body ---------- */
-body{
-  min-height:100vh;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  font-family:Arial,Helvetica,sans-serif;
-  background:var(--chelsea);
-  color:#fff;
+.zoro-gif {
+  max-width: 200px;
+  border-radius: 10px;
+  border: 2px solid var(--cyan);
+  box-shadow: 0 0 15px var(--cyan);
 }
-/* ---------- hero GIF ---------- */
-.gif-container{animation:fadeIn 1.3s ease-out;margin-bottom:24px}
-.zoro-gif{
-  width:100%;max-width:300px;border-radius:10px;
-  border:2px solid var(--cyan);
-  box-shadow:0 0 12px var(--cyan);
-  animation:glow 2.5s infinite alternate;
+
+.form-box {
+  background: #111;
+  padding: 24px;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(0,0,0,0.6);
+  width: 90%;
+  max-width: 350px;
+  text-align: center;
 }
-@keyframes fadeIn{from{opacity:0;transform:translateY(-20px)}to{opacity:1;transform:translateY(0)}}
-@keyframes glow{from{box-shadow:0 0 8px var(--cyan)}to{box-shadow:0 0 26px var(--cyan)}}
-/* ---------- login box ---------- */
-.login-box{
-  background:#111;padding:24px 22px;border-radius:12px;
-  box-shadow:0 0 20px rgba(0,0,0,.6);
-  width:98%;max-width:350px;
+
+.form-box input {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 6px;
+  background: #222;
+  color: #fff;
 }
-.eye-wrap{position:relative}
-.eye-wrap input{
-  width:100%;padding:12px 44px 12px 12px;border:none;border-radius:8px;
-  background:#222;color:#fff;font-size:15px;outline:none;
+
+.form-box button {
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
 }
-.eye-wrap .eye{
-  position:absolute;right:12px;top:50%;transform:translateY(-50%);
-  cursor:pointer;font-size:1.15rem;color:#bbb;
+.form-box button:hover {
+  background-color: #0056b3;
 }
-button{
-  width:100%;padding:12px;margin-top:14px;border:none;border-radius:8px;
-  font-size:15px;font-weight:600;color:#fff;background:#0066ff;cursor:pointer;
-  transition:background .25s;
+
+.bottom-lines {
+  position: fixed;
+  bottom: 20px;
+  width: 100%;
+  text-align: center;
+  color: #ccc;
+  font-size: 14px;
+  font-style: italic;
 }
-button:hover{background:#1a7dff}
-/* ---------- popup ---------- */
-#popup{
-  display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
-  background:#000;padding:30px 20px;border-radius:12px;color:#fff;z-index:999;
-  width:90%;max-width:380px;text-align:center;box-shadow:0 0 18px rgba(0,0,0,.7);
+.bottom-lines hr {
+  border: none;
+  border-top: 2px solid black;
+  margin: 5px auto;
+  width: 100%;
 }
-#popup img{width:130px;margin-bottom:18px;border-radius:10px}
-#popup button{
-  background:#007bff;color:#fff;padding:10px 22px;border:none;border-radius:6px;
-  cursor:pointer;margin-top:15px;font-size:16px;
+
+#popup {
+  display: none;
+  text-align: center;
+  background-color: black;
+  padding: 30px 20px;
+  border-radius: 12px;
+  color: white;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+  z-index: 10;
+  width: 90%;
+  max-width: 380px;
 }
-#popup button:hover{background:#1a7dff}
-/* ---------- bottom lines ---------- */
-.bottom-lines{
-  position:fixed;bottom:20px;width:100%;text-align:center;
-  color:#ccc;font-size:14px;font-style:italic;
+#popup img {
+  width: 130px;
+  margin-bottom: 18px;
 }
-.bottom-lines hr{
-  border:none;border-top:2px solid #000;margin:5px auto;width:100%;
-}
-</style>
+
+  </style>
 </head>
-
-<body>
-  <!-- glowing GIF -->
-  <div class="gif-container">
+<body>  <div class="gif-container">
     <img src="zoro.gif" alt="Zoro GIF" class="zoro-gif">
-  </div>
-
-  <!-- login card -->
-  <div class="login-box">
-    <div class="eye-wrap">
-      <input type="password" id="pwd" placeholder="Enter site password">
-      <span class="eye" onclick="togglePwd()">👁️</span>
-    </div>
-    <button onclick="unlock()">Unlock</button>
-  </div>
-
-  <!-- wrong-password popup -->
-  <div id="popup">
-    <img src="luffy.png" alt="Wrong password">
-    <p style="font-size:20px">❌ Nice try, Bitch! ❌</p>
+  </div>  <div class="form-box">
+    <h2>Mi-Vault Login</h2>
+    <input type="email" id="email" placeholder="Enter your email" />
+    <input type="password" id="password" placeholder="Enter your password" />
+    <button onclick="login()">Login</button>
+    <button onclick="signup()">Sign Up</button>
+  </div>  <!-- Wrong-password popup -->  <div id="popup">
+    <img src="luffy.png" alt="Wrong password" />
+    <p style="font-size: 20px;">❌ Nice try, Bitch! ❌</p>
     <button onclick="hidePopup()">OK</button>
-  </div>
-
-  <!-- bottom banner -->
-  <div class="bottom-lines">
+  </div>  <div class="bottom-lines">
     <hr />
-    <p>🔑 Password or Leave!! Bye</p>
+    <p>Sign it up✏️</p>
     <hr />
   </div>
-
-<script>
-/* ----------------  focus & back-button guard  ---------------- */
-window.onload = () => {
-  document.getElementById('pwd').focus();
-  history.pushState(null,"",location.href);
-  window.onpopstate = () => history.pushState(null,"",location.href);
-  resetTimer();           // start inactivity timer
-};
-/* ----------------  eye toggle  ---------------- */
-function togglePwd(){
-  const inp=document.getElementById('pwd');
-  inp.type = inp.type==='password' ? 'text' : 'password';
-}
-/* ----------------  unlock logic  ---------------- */
-function unlock(){
-  const PASS="faka@200998";          // ⚠ Plain-text: for demo only
-  const entered=document.getElementById('pwd').value.trim();
-  if(entered===PASS){
-    location.href="dashboard.html";  // proceed to your vault page
-  }else{
-    showPopup();
-  }
-}
-/* ----------------  popup helpers  ---------------- */
-function showPopup(){document.getElementById('popup').style.display='block'}
-function hidePopup(){document.getElementById('popup').style.display='none'}
-/* ----------------  inactivity auto-lock  ---------------- */
-let timeoutID;
-function lockSite(){
-  /* simply reload this page so user lands back on login */
-  location.reload();
-}
-function resetTimer(){
-  clearTimeout(timeoutID);
-  timeoutID = setTimeout(lockSite, 120000); // 2 minutes
-}
-document.onclick = resetTimer;
-document.onkeypress = resetTimer;
-</script>
-</body>
-</html>
