--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,114 +8,127 @@
     :root {
       --chelsea: #0047ab;
       --cyan: #00fff0;
-    }body {
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  background: var(--chelsea);
-  color: #fff;
-}
-
-.gif-container {
-  margin-bottom: 20px;
-}
-.zoro-gif {
-  max-width: 200px;
-  border-radius: 10px;
-  border: 2px solid var(--cyan);
-  box-shadow: 0 0 15px var(--cyan);
-}
-
-.form-box {
-  background: #111;
-  padding: 24px;
-  border-radius: 12px;
-  box-shadow: 0 0 20px rgba(0,0,0,0.6);
-  width: 90%;
-  max-width: 350px;
-  text-align: center;
-}
-
-.form-box input {
-  width: 100%;
-  padding: 12px;
-  margin: 10px 0;
-  border: none;
-  border-radius: 6px;
-  background: #222;
-  color: #fff;
-}
-
-.form-box button {
-  background-color: #007bff;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  width: 100%;
-}
-.form-box button:hover {
-  background-color: #0056b3;
-}
-
-.bottom-lines {
-  position: fixed;
-  bottom: 20px;
-  width: 100%;
-  text-align: center;
-  color: #ccc;
-  font-size: 14px;
-  font-style: italic;
-}
-.bottom-lines hr {
-  border: none;
-  border-top: 2px solid black;
-  margin: 5px auto;
-  width: 100%;
-}
-
-#popup {
-  display: none;
-  text-align: center;
-  background-color: black;
-  padding: 30px 20px;
-  border-radius: 12px;
-  color: white;
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
-  z-index: 10;
-  width: 90%;
-  max-width: 380px;
-}
-#popup img {
-  width: 130px;
-  margin-bottom: 18px;
-}
-
+    }
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: Arial, sans-serif;
+      background: var(--chelsea);
+      color: #fff;
+    }
+    .gif-container {
+      margin-bottom: 20px;
+    }
+    .zoro-gif {
+      max-width: 200px;
+      border-radius: 10px;
+      border: 2px solid var(--cyan);
+      box-shadow: 0 0 15px var(--cyan);
+    }
+    .form-box {
+      background: #111;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.6);
+      width: 90%;
+      max-width: 350px;
+      text-align: center;
+    }
+    .form-box input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 6px;
+      background: #222;
+      color: #fff;
+    }
+    .form-box button {
+      background-color: #007bff;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      width: 100%;
+    }
+    .form-box button:hover {
+      background-color: #0056b3;
+    }
+    .bottom-lines {
+      position: fixed;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      color: #ccc;
+      font-size: 14px;
+      font-style: italic;
+    }
+    .bottom-lines hr {
+      border: none;
+      border-top: 2px solid black;
+      margin: 5px auto;
+      width: 100%;
+    }
+    #popup {
+      display: none;
+      text-align: center;
+      background-color: black;
+      padding: 30px 20px;
+      border-radius: 12px;
+      color: white;
+      position: absolute;
+      top: 55%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
+      z-index: 10;
+      width: 90%;
+      max-width: 380px;
+    }
+    #popup img {
+      width: 130px;
+      margin-bottom: 18px;
+    }
   </style>
 </head>
-<body>  <div class="gif-container">
-    <img src="zoro.gif" alt="Zoro GIF" class="zoro-gif">
-  </div>  <div class="form-box">
+<body>
+  <div class="gif-container">
+    <img src="zoro.gif" class="zoro-gif" alt="Zoro GIF" />
+  </div>
+
+  <div class="form-box">
     <h2>Mi-Vault Login</h2>
-    <input type="email" id="email" placeholder="Enter your email" />
-    <input type="password" id="password" placeholder="Enter your password" />
+    <input type="email" id="email" placeholder="Email" />
+    <input type="password" id="password" placeholder="Password" />
     <button onclick="login()">Login</button>
     <button onclick="signup()">Sign Up</button>
-  </div>  <!-- Wrong-password popup -->  <div id="popup">
-    <img src="luffy.png" alt="Wrong password" />
-    <p style="font-size: 20px;">❌ Nice try, Bitch! ❌</p>
+  </div>
+
+  <div id="popup">
+    <img src="luffy.png" alt="Wrong password image" />
+    <p style="font-size: 20px;">❌ Nice try, wrong password!</p>
     <button onclick="hidePopup()">OK</button>
-  </div>  <div class="bottom-lines">
+  </div>
+
+  <div class="bottom-lines">
     <hr />
-    <p>Sign it up✏️</p>
+    <p>Sign up✏️</p>
     <hr />
   </div>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
+
+  <!-- Your Firebase config -->
+  <script src="firebase-config.js"></script>
+
+  <!-- Login/signup logic -->
+  <script src="script.js"></script>
+</body>
+</html>
