--- a/index.html
+++ b/index.html
@@ -4,49 +4,105 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mi-Vault</title>
+
+  <!-- Firebase SDKs -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDFNU8yzBvE9m6-cf8Xj6AIqZ5cokMBXm8",
+      authDomain: "mi-vault-project.firebaseapp.com",
+      projectId: "mi-vault-project",
+      storageBucket: "mi-vault-project.appspot.com",
+      messagingSenderId: "206788272282",
+      appId: "1:206788272282:web:4a527f18cf79fef44597a2"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+
+    // Sign-up
+    document.addEventListener("DOMContentLoaded", () => {
+      document.getElementById("signup-btn").addEventListener("click", (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        createUserWithEmailAndPassword(auth, email, password)
+          .then(() => {
+            alert("Signup successful!");
+            window.location.href = "dashboard.html";
+          })
+          .catch((error) => {
+            alert("Error: " + error.message);
+          });
+      });
+
+      // Login
+      document.getElementById("login-btn").addEventListener("click", (e) => {
+        e.preventDefault();
+        const email = document.getElementById("email").value;
+        const password = document.getElementById("password").value;
+
+        signInWithEmailAndPassword(auth, email, password)
+          .then(() => {
+            alert("Login successful!");
+            window.location.href = "dashboard.html";
+          })
+          .catch((error) => {
+            alert("Error: " + error.message);
+          });
+      });
+
+      // Toggle password visibility
+      document.getElementById("togglePassword").addEventListener("click", function () {
+        const passwordInput = document.getElementById("password");
+        const type = passwordInput.getAttribute("type") === "password" ? "text" : "password";
+        passwordInput.setAttribute("type", type);
+        this.textContent = type === "password" ? "👁️" : "🙈";
+      });
+    });
+  </script>
+
   <style>
-    :root {
-      --chelsea: #0047ab;
-      --cyan: #00fff0;
-    }
     body {
       margin: 0;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      padding: 0;
+      background-color: #014aad; /* Chelsea blue */
       font-family: Arial, sans-serif;
-      background: var(--chelsea);
-      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      flex-direction: column;
     }
-    .gif-container {
-      margin-bottom: 20px;
-    }
-    .zoro-gif {
-      max-width: 200px;
-      border-radius: 10px;
-      border: 2px solid var(--cyan);
-      box-shadow: 0 0 15px var(--cyan);
-    }
+
     .form-box {
-      background: #111;
-      padding: 24px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.6);
+      background-color: #1c1c1c;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
       width: 90%;
       max-width: 350px;
       text-align: center;
+      color: white;
     }
+
+    .form-box h2 {
+      margin-bottom: 20px;
+    }
+
     .form-box input {
       width: 100%;
-      padding: 12px;
+      padding: 10px;
       margin: 10px 0;
       border: none;
-      border-radius: 6px;
-      background: #222;
-      color: #fff;
+      border-radius: 5px;
+      background-color: #333;
+      color: white;
     }
+
     .form-box button {
       background-color: #007bff;
       color: white;
@@ -55,80 +111,65 @@
       border-radius: 5px;
       cursor: pointer;
       width: 100%;
+      margin-top: 10px;
     }
+
     .form-box button:hover {
       background-color: #0056b3;
     }
-    .bottom-lines {
-      position: fixed;
-      bottom: 20px;
-      width: 100%;
-      text-align: center;
-      color: #ccc;
-      font-size: 14px;
-      font-style: italic;
-    }
-    .bottom-lines hr {
-      border: none;
-      border-top: 2px solid black;
-      margin: 5px auto;
-      width: 100%;
-    }
-    #popup {
-      display: none;
-      text-align: center;
-      background-color: black;
-      padding: 30px 20px;
-      border-radius: 12px;
-      color: white;
+
+    #togglePassword {
+      cursor: pointer;
       position: absolute;
-      top: 55%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);
-      z-index: 10;
-      width: 90%;
-      max-width: 380px;
+      right: 30px;
+      margin-top: -35px;
+      color: #aaa;
     }
-    #popup img {
-      width: 130px;
-      margin-bottom: 18px;
+
+    .password-wrapper {
+      position: relative;
+    }
+
+    img.logo {
+      width: 150px;
+      height: auto;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px cyan;
+    }
+
+    .bottom-lines {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      padding: 10px;
+      color: white;
+      font-size: 0.9em;
+      border-top: 1px solid white;
     }
   </style>
 </head>
 <body>
-  <div class="gif-container">
-    <img src="zoro.gif" class="zoro-gif" alt="Zoro GIF" />
-  </div>
 
+  <img src="ninja.png" alt="Mi-Vault Logo" class="logo" />
+  
   <div class="form-box">
     <h2>Mi-Vault Login</h2>
     <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <button onclick="login()">Login</button>
-    <button onclick="signup()">Sign Up</button>
-  </div>
-
-  <div id="popup">
-    <img src="luffy.png" alt="Wrong password image" />
-    <p style="font-size: 20px;">❌ Nice try, wrong password!</p>
-    <button onclick="hidePopup()">OK</button>
+    
+    <div class="password-wrapper">
+      <input type="password" id="password" placeholder="Password" />
+      <span id="togglePassword">👁️</span>
+    </div>
+    
+    <button id="login-btn">Login</button>
+    <button id="signup-btn">Sign Up</button>
   </div>
 
   <div class="bottom-lines">
-    <hr />
-    <p>Sign up✏️</p>
-    <hr />
+    This site is secret
   </div>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
-
-  <!-- Your Firebase config -->
-  <script src="firebase-config.js"></script>
-
-  <!-- Login/signup logic -->
-  <script src="script.js"></script>
 </body>
 </html>
