--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     <h2>Mi-Vault Login</h2>
     <input type="email" id="email" placeholder="Email" />
     
-    <div class="password-wrapper">
-      <input type="password" id="password" placeholder="Password" />
-      <span id="togglePassword">👁️</span>
-    </div>
+    <div class="password-box">
+  <input type="password" id="password" placeholder="Enter Password" />
+  <span class="eye-icon" onclick="togglePassword()">👁️</span>
+</div>
     
     <button id="login-btn">Login</button>
     <button id="signup-btn">Sign Up</button>
