--- a/dashboard.html
+++ b/dashboard.html
@@ -1,107 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Secure Storage</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #000;
-      color: white;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Mi-Vault | Dashboard</title>
 
-    header {
-      padding: 15px;
-      font-size: 22px;
-      font-weight: bold;
-      text-align: center;
-      background-color: #111;
-      border-bottom: 1px solid #333;
-    }
+  <!-- Fonts & Icons -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
 
-    .container {
-      padding: 10px 20px;
-    }
-
-    .folder {
-      display: flex;
-      align-items: center;
-      padding: 12px 10px;
-      border-bottom: 1px solid #222;
-    }
-
-    .folder img {
-      width: 32px;
-      height: 32px;
-      margin-right: 15px;
-    }
-
-    .folder-text {
-      flex-grow: 1;
-    }
-
-    .folder-name {
-      font-size: 16px;
-      font-weight: 500;
-    }
-
-    .folder-meta {
-      font-size: 13px;
-      color: #aaa;
-    }
-
-    .folder a {
-      color: white;
-      text-decoration: none;
-      width: 100%;
-      display: flex;
-      align-items: center;
-    }
-
-    .arrow {
-      font-size: 18px;
-      color: #555;
-    }
-  </style>
+  <!-- Styles -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>Storage</header>
-  <div class="container">
-    <!-- Folder Item -->
-    <div class="folder">
-      <a href="https://your-link/photos" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="folder" />
-        <div class="folder-text">
-          <div class="folder-name">Photos</div>
-          <div class="folder-meta">28/11/2023 | 12 items</div>
-        </div>
-        <div class="arrow">›</div>
-      </a>
+  <!-- —— Dashboard Header —— -->
+  <header class="dashboard-header">
+    <h1>📁 Mi-Vault</h1>
+    <div class="user-controls">
+      <span id="userNameDisplay">Welcome, User</span>
+      <button id="logoutBtn" title="Logout"><i class="fa-solid fa-right-from-bracket"></i></button>
     </div>
+  </header>
 
-    <div class="folder">
-      <a href="https://your-link/videos" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="folder" />
-        <div class="folder-text">
-          <div class="folder-name">Videos</div>
-          <div class="folder-meta">29/06/2024 | 5 items</div>
-        </div>
-        <div class="arrow">›</div>
-      </a>
-    </div>
+  <!-- —— Folder Grid —— -->
+  <main class="vault-grid" id="vaultGrid">
+    <!-- Folders will be loaded here dynamically -->
+  </main>
 
-    <div class="folder">
-      <a href="https://your-link/docs" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/716/716784.png" alt="folder" />
-        <div class="folder-text">
-          <div class="folder-name">Documents</div>
-          <div class="folder-meta">05/06/2025 | 3 items</div>
-        </div>
-        <div class="arrow">›</div>
-      </a>
-    </div>
-  </div>
+  <!-- —— Upload Area —— -->
+  <section class="upload-section">
+    <label for="fileUpload" class="upload-btn">
+      <i class="fa-solid fa-upload"></i> Upload File
+    </label>
+    <input type="file" id="fileUpload" multiple hidden />
+  </section>
+
+  <!-- —— Footer —— -->
+  <footer>
+    <hr class="thin-line"/>
+    <hr class="thin-line"/>
+    <p>© 2025 Mi-Vault | Private Vault System</p>
+  </footer>
+
+  <!-- Script -->
+  <script src="dashboard.js" defer></script>
 </body>
 </html>
